<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_seed_input_active"
        android:visibility="invisible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/card_barcode"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="20dp"
            android:background="@color/bright_white"
            android:contentDescription="@string/receive_qrcode_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/card_logo"
            android:layout_width="52dp"
            android:layout_height="22dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toEndOf="@+id/card_barcode"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/notosans_regular"
            android:letterSpacing="0.3"
            android:text="@string/receive_card_title"
            android:textAllCaps="true"
            android:textColor="@color/bright_white"
            android:textSize="24dp"
            app:layout_constraintStart_toEndOf="@+id/card_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage,UnusedAttribute" />

        <TextView
            android:id="@+id/card_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/notosans_regular"
            android:textColor="@color/bright_white"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_barcode"
            app:layout_constraintTop_toBottomOf="@+id/card_logo"
            tools:ignore="SpUsage"
            tools:text="xrb_3ugkt5gexef4ffotr839bwfrfux6pp1g7k8cbtk8ocnq99yc3pfdn11cr1ft" />

        <TextView
            android:id="@+id/card_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/receive_card_label"
            android:textColor="@color/dark_sky_blue"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_barcode"
            tools:ignore="SpUsage" />

    </android.support.constraint.ConstraintLayout>
</layout>
